--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,8 +1,8 @@
 name: Foundation
-version: 1.0.2
+version: 1.0.5
 description: "A high-performance, responsive Grav theme using the Zurb Foundation front-end framework."
 icon: rocket
-screenshot: ./assets/screenshot.jpg
+screenshot: screenshot.jpg
 author:
   name: Brett DeWoody
   email: brettdewoody@gmail.com
